// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translate components does not touch non-translation props 1`] = `
<Component
  notToBeTranslated={99}
>
  <SomeTestComponent
    kebab-label="Du, du hast."
    message="Eine Schweinshaxe, bitte."
    notToBeTranslated={99}
    title="Dies ist ein fester Titel"
  >
    <img
      width={99}
    />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</Component>
`;

exports[`Translate components passes default \`de_DE\` translated strings to wrapped components 1`] = `
<Component>
  <SomeTestComponent
    kebab-label="Du, du hast."
    message="Eine Schweinshaxe, bitte."
    title="Dies ist ein fester Titel"
  >
    <img
      width={100}
    />
    <h1>
      Dies ist ein fester Titel
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</Component>
`;

exports[`Translate components passes translated strings alongside default fallbacks to wrapped components 1`] = `
<Component>
  <SomeTestComponent
    kebab-label="Du, du hast."
    message="Eine Schweinshaxe, bitte."
    title="Good day, Sir."
  >
    <img
      width={100}
    />
    <h1>
      Good day, Sir.
    </h1>
    <h2>
      Du, du hast.
    </h2>
    <p>
      Eine Schweinshaxe, bitte.
    </p>
  </SomeTestComponent>
</Component>
`;
